--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ span{
   	left: 0px;
 	opacity: 1.0;
 	background-color: #ffffff;
-
 	display: flex;
 	align-items: center;
 	margin-left: 100px;
@@ -178,7 +177,7 @@ span{
 	flex: 1;
 	overflow-y: auto;
 	height: 100%;
-	padding: 0 20px;
+	padding: 0 0px;
 	margin: 20px 0px;
 	color: #4e4e4e;}
 
@@ -197,6 +196,46 @@ span{
 	display: block;
     margin-left: auto;
     margin-right: auto;}
+
+.partial-l{
+	display:flex;
+	vertical-align: middle;
+	align-items: left;}
+
+.partial-l img{
+	width:100px;
+	height:100px;
+	object-fit: cover;
+	border-radius: 0 0 50% 0;
+	position:relative;
+	left:-30px;}
+
+.partial-l p{
+	float: right;
+	text-align: center;}
+
+.partial-r{
+	display:flex;
+	vertical-align: middle;
+	align-items: right;
+	float: right;}
+
+.partial-r img{
+	width:300px;
+	height:300px;
+	object-fit: cover;
+	border-radius: 50% 0 0 0;
+	position:relative;
+	float: right;
+	right:-100px;}
+
+.partial-r p{
+	float: left;
+	vertical-align: middle;
+	text-align: center;}
+
+.about{
+	text-align: justify;}
 
 .footer{
 	font-size: 14px;
@@ -229,7 +268,7 @@ span{
 	color: #333;
 	text-decoration: none;}
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 1000px){
 	.splash img{
 		height: 200px;}
 	.header{
