--- a/style.css
+++ b/style.css
@@ -179,7 +179,8 @@ span{
 	height: 100%;
 	padding: 0 0px;
 	margin: 20px 0px;
-	color: #4e4e4e;}
+	color: #4e4e4e;
+	width: 100%;}
 
 .main.content a{
 	color: #2773c3;
@@ -286,7 +287,7 @@ span{
 	.main.sidebar{
 		font-size: 14px;
 		position: relative;
-		width: auto;
+		width: 100%;
 		top: 0px;
 		margin-top: 20px;}
 	.main.sidebar ul{
@@ -307,7 +308,8 @@ span{
 		margin: 0 10px;}
 	.main.content{
 		margin: 20px 0px;
-		padding: 0 0px;}
+		padding: 0 0px;
+		width: 100%;}
 
 	.footer {
 		font-size: 12px;}
