--- a/style.css
+++ b/style.css
@@ -145,7 +145,9 @@ span{
 
 .main.sidebar a{
 	color: #333;
-	text-decoration: none;}
+	text-decoration: none;
+	align-items: center;
+	height: 100%;}
 
 .main.sidebar h1, h2, h3{
 	margin: 10px 0px;}
@@ -297,7 +299,10 @@ span{
 	.main.sidebar li{
 		margin: 0 10px;
 		text-align: center;
-		border-bottom: 0px solid #cbcbcb;}
+		border-bottom: 0px solid #cbcbcb;}	
+	.main.sidebar a{
+		display: flex;
+		font-size: 14px;}
 	.main.sidebar.links{
 		top: 0px;
 		font-size: 12px;}
@@ -306,6 +311,7 @@ span{
 		border-bottom: 0px solid #cbcbcb;}
 	.main.sidebar.links li{
 		margin: 0 10px;}
+
 	.main.content{
 		margin: 20px 0px;
 		padding: 0 0px;
@@ -323,7 +329,7 @@ span{
 		margin: 0 10px;
 		top: 0px;}}
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 700px){
 	.header ul{
 		visibility: hidden;
 		width: 0px;}
@@ -334,4 +340,8 @@ span{
 
 	.main{
 		margin: 0 8px;}
+	.simplify{
+		visibility: hidden;
+		width: 0px;
+		margin: 0px 0px;}
 	
