--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 
 @font-face {
-	font-family: 'Magnoilia';
-	src: url('Assets/Magnolia.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-	font-display: block;}
-
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/roboto/v30/KFOkCnqEu92Fr1MmgVxGIzIFKw.woff2) format('woff2');
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
 @font-face {
 	font-family: 'Times';
 	src: url('Assets/times.ttf') format('truetype');
@@ -14,7 +15,7 @@
 	font-display: block;}
 
 body{
-	font-family: 'Magnolia';
+	font-family: 'Roboto';
 	font-size: 18px;
 	margin: 0 0px;}
 
@@ -22,13 +23,50 @@ span{
 	font-family: 'Times';}
 
 .splash{
-	overflow: hidden;}
+	position: sticky;
+	top:0px;
+	background-color: rgb(0, 0, 0);
+	overflow: hidden;
+	height:100vh;}
 
 .splash img{
 	height: 100vh;
 	width: 100%;
 	object-fit: cover;
-	position: fixed;}
+    	-webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,.25)));}
+
+.splash p{
+	position: relative;
+	top: -75px;
+	color: white;
+  margin: auto;
+  width: 50%;
+font-size: 50px;
+text-align: center;}
+
+.splashshort{
+	position:sticky;
+	top:0px;
+	background-color: rgb(0, 0, 0);
+	overflow: hidden;
+	height:66vh;}
+
+.splashshort img{
+    transition: 0.5s;
+	height: 66vh;
+	width: 100%;
+	object-fit: cover;
+    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, 
+    from(rgba(0,0,0,1)), to(rgba(0,0,0,.25)));}
+
+.splashshort p{
+	position: relative;
+	top: -75px;
+	color: white;
+  margin: auto;
+  width: 50%;
+font-size: 50px;
+text-align: center;}
 
 .header{
 	position: fixed;
@@ -150,7 +188,7 @@ span{
 	overflow-y: hidden;}
 
 .main.sidebar ul{
-	margin-left: auto;
+	margin-left: 90px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
@@ -161,7 +199,6 @@ span{
 
 .main.sidebar li{
 	margin: 6px 0px;
-	text-align: center;
 	font-size: 18px;}
 
 .main.sidebar a{
@@ -183,7 +220,6 @@ span{
 	margin: 0 0;}
 
 .main.sidebar.links ul{
-	margin-left: 0px;
 	margin-top: 0px;
 	justify-content: flex-start;
 	width: 100%;
@@ -192,18 +228,81 @@ span{
 .main.sidebar.links li{
 	font-size: 14px;}
 
+.main.sidebar.links i{
+	margin 0 5px;}
+
 .main.sidebar.links a{
+	color: #333;
+	text-decoration: none;}
+
+.main.sub_sidebar{
+	height: min-content;
+	font-size: 16px;
+	position: sticky;
+	align-self: flex-start;
+	top: 80px;
+	width: 400px;
+	margin-top: 20px;
+ 	z-index: 1;
+	overflow-y: hidden;}
+
+.main.sub_sidebar ul{
+	margin-left: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	list-style-type: none;
+	margin-right: 20px;
+	padding-left: 0px;
+	border-bottom: 1px solid #cbcbcb;}
+
+.main.sub_sidebar li{
+	margin: 6px 0px;
+	text-align: center;
+	font-size: 18px;}
+
+.main.sub_sidebar a{
+	color: #333;
+	text-decoration: none;
+	align-items: center;
+	height: 100%;}
+
+.main.sub_sidebar h1, h2, h3{
+	margin: 10px 0px;}
+
+.main.sub_sidebar h3{
+	text-align: center;}
+
+.main.sub_sidebar div{
+	width: 100%;}
+
+.main.sub_sidebar.links{
+	margin: 0 0;}
+
+.main.sub_sidebar.links ul{
+	margin-left: 0px;
+	margin-top: 0px;
+	justify-content: flex-start;
+	width: 100%;
+	border-bottom: 0px solid #cbcbcb;}
+
+.main.sub_sidebar.links li{
+	font-size: 14px;}
+
+.main.sub_sidebar.links a{
 	color: #333;
 	text-decoration: none;}
 
 .main.content{
 	flex: 1;
 	overflow-y: auto;
-	height: 100%;
+	height: 50%;
 	padding: 0 0px;
 	margin: 20px 0px;
 	color: #4e4e4e;
-	width: 100%;}
+	width: 100%;
+	margin-top:auto;
+	margin-bottom:auto;}
 
 .main.content a{
 	color: #2773c3;
@@ -215,6 +314,15 @@ span{
 .avatar img{
 	width: 200px;
 	height: 200px;
+	border-radius: 50%;
+	overflow: hidden;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;}
+
+.sub_image img{
+	width: 400px;
+	height: 400px;
 	border-radius: 50%;
 	overflow: hidden;
 	display: block;
@@ -261,6 +369,18 @@ span{
 .about{
 	text-align: justify;}
 
+.about h2{
+	width:50%;
+	margin:auto;
+	text-align: center;
+	margin-bottom:5px;}
+
+.about a{
+	display:block;
+	width:50%;
+	margin:auto;
+	text-align: center;}
+
 .footer{
 	font-size: 14px;
 	position: relative;
@@ -286,6 +406,9 @@ span{
 	margin: 0 20px;
 	color: #333;
 	text-decoration: none;}
+
+.footer.links i{
+	margin: 0 5px;}
 
 .footer.copyright p{
 	margin: 0 120px;
@@ -315,6 +438,7 @@ span{
 		margin-right: 0px;}
 	.main.sidebar ul{
 		flex-direction: row;
+		margin-left:0px;
 		justify-content: center;
 		border-bottom: 1px solid #cbcbcb;}
 	.main.sidebar li{
@@ -332,6 +456,36 @@ span{
 		border-bottom: 0px solid #cbcbcb;}
 	.main.sidebar.links li{
 		margin: 0 10px;}
+	.main.sidebar.links i{
+		margin: 0 5px;}
+
+	.main.sub_sidebar{
+		font-size: 14px;
+		position: relative;
+		width: 100%;
+		top: 0px;
+		margin-top: 20px;
+		margin-left: 0px;
+		margin-right: 0px;}
+	.main.sub_sidebar ul{
+		flex-direction: row;
+		justify-content: center;
+		border-bottom: 1px solid #cbcbcb;}
+	.main.sub_sidebar li{
+		margin: 0 10px;
+		text-align: center;
+		border-bottom: 0px solid #cbcbcb;}	
+	.main.sub_sidebar a{
+		display: flex;
+		font-size: 14px;}
+	.main.sub_sidebar.links{
+		top: 0px;
+		font-size: 12px;}
+	.main.sub_sidebar.links ul{
+		justify-content: center;
+		border-bottom: 0px solid #cbcbcb;}
+	.main.sub_sidebar.links li{
+		margin: 0 10px;}
 
 	.main.content{
 		margin: 20px 0px;
@@ -344,8 +498,9 @@ span{
 		text-align: center;
 		margin: 0 0px;}
 	.footer.links a{
-		
 		margin: 0 10px;}
+	.footer.links i{
+		margin: 0 5px;}
 	.footer.copyright p{
 		margin: 0 10px;
 		top: 0px;}}
@@ -362,4 +517,11 @@ span{
 		visibility: hidden;
 		width: 0px;
 		margin: 0px 0px;}
+	.main.sidebar.links li{
+		margin: 0 1px;}}
+
+@media screen and (max-width: 400px){
+	.sub_image img{
+		width:200px;
+		height:200px;}}
 	
