--- a/style.css
+++ b/style.css
@@ -159,6 +159,21 @@ text-align: center;}
 	margin-right: 100px;
 	flex-direction: row;}
 
+.holder{
+	margin:auto;
+	display: flex;
+		flex-direction: column;
+	margin-bottom:10px;}
+
+.holder ul{
+	margin:auto;}
+
+.holder li{
+	text-align:center;}
+
+.body_text{
+	text-align: left;}
+
 .main.head{
 	background: linear-gradient(to bottom, #00000000 0%, #000000b8 100%);
 	margin: 0px 0px;
@@ -176,6 +191,8 @@ text-align: center;}
 	margin-bottom: 100px;}
 
 .main.sidebar{
+	margin-left:50px;
+	margin-right:50px;
 	height: min-content;
 	font-size: 16px;
 	position: sticky;
@@ -235,6 +252,8 @@ text-align: center;}
 	text-decoration: none;}
 
 .main.sub_sidebar{
+	margin-left:50px;
+	margin-right:50px;
 	height: min-content;
 	font-size: 16px;
 	position: sticky;
@@ -310,6 +329,11 @@ text-align: center;}
 .main.content p{
 	margin-top: 0px;}
 
+.main.content h1{
+	margin:auto;
+	margin-bottom: 20px;
+	margin-top:20px;}
+
 .avatar img{
 	width: 200px;
 	height: 200px;
@@ -327,6 +351,19 @@ text-align: center;}
 	display: block;
     margin-left: auto;
     margin-right: auto;}
+
+.side_image{}
+
+.side_image img{
+	width: 400px;
+	height: 400px;
+	border-radius: 50%;
+	overflow: hidden;
+	display: block;
+    	margin-left:20px;
+   	margin-right:20px;
+	float: right;
+	margin-bottom:10px;}
 
 .partial-l{
 	display:flex;
@@ -369,7 +406,7 @@ text-align: center;}
 	text-align: justify;}
 
 .about h2{
-	width:50%;
+	width:100%;
 	margin:auto;
 	text-align: center;
 	margin-bottom:5px;}
@@ -427,6 +464,12 @@ text-align: center;}
 		margin: 0 50px;
 		font-size: 16px;
 		flex-direction: column;}
+
+	.holder{
+		overflow: hidden;
+		font-size: 16px;
+		flex-direction: column;}
+
 	.main.sidebar{
 		font-size: 14px;
 		position: relative;
@@ -440,6 +483,8 @@ text-align: center;}
 		margin-left:0px;
 		justify-content: center;
 		border-bottom: 1px solid #cbcbcb;}
+	.main.sidebar h1{
+		text-align:center;}
 	.main.sidebar li{
 		margin: 0 10px;
 		text-align: center;
@@ -511,16 +556,22 @@ text-align: center;}
 	.header.dropdown{
 		display: block;}
 	.main{
-		margin: 0 8px;}
+		margin: 0 15px;}
 	.simplify{
 		visibility: hidden;
 		width: 0px;
 		margin: 0px 0px;}
 	.main.sidebar.links li{
-		margin: 0 1px;}}
+		margin: 0 1px;}
+	.side_image img{
+		float:none;
+		margin:auto;}}
 
 @media screen and (max-width: 400px){
 	.sub_image img{
 		width:200px;
-		height:200px;}}
+		height:200px;}
+	.side_image img{
+		width:90vw;
+		height:90vw;}}
 	
