--- a/style.css
+++ b/style.css
@@ -5,14 +5,7 @@
   font-weight: 100;
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/roboto/v30/KFOkCnqEu92Fr1MmgVxGIzIFKw.woff2) format('woff2');
-  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-@font-face {
-	font-family: 'Times';
-	src: url('Assets/times.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-	font-display: block;}
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;}
 
 body{
 	font-family: 'Roboto';
@@ -161,6 +154,8 @@ text-align: center;}
 
 .holder{
 	margin:auto;
+	padding-right:100px;
+	padding-left:100px;
 	display: flex;
 		flex-direction: column;
 	margin-bottom:10px;}
@@ -169,6 +164,9 @@ text-align: center;}
 	margin:auto;}
 
 .holder li{
+	text-align:center;}
+
+.holder h1{
 	text-align:center;}
 
 .body_text{
@@ -547,7 +545,10 @@ text-align: center;}
 		margin: 0 5px;}
 	.footer.copyright p{
 		margin: 0 10px;
-		top: 0px;}}
+		top: 0px;}
+	.holder{
+		padding-right:75px;
+		padding-left:75px;}}
 
 @media screen and (max-width: 700px){
 	.header ul{
@@ -565,7 +566,10 @@ text-align: center;}
 		margin: 0 1px;}
 	.side_image img{
 		float:none;
-		margin:auto;}}
+		margin:auto;}
+	.holder{
+		padding-right:50px;
+		padding-left:50px;}}
 
 @media screen and (max-width: 400px){
 	.sub_image img{
@@ -573,5 +577,8 @@ text-align: center;}
 		height:200px;}
 	.side_image img{
 		width:90vw;
-		height:90vw;}}
+		height:90vw;}
+	.holder{
+		padding-right:5px;
+		padding-left:5px;}}
 	
