--- a/style.css
+++ b/style.css
@@ -169,6 +169,9 @@ text-align: center;}
 .holder h1{
 	text-align:center;}
 
+.text.block{
+	border-bottom: 1px solid #cbcbcb;}
+
 .body_text{
 	text-align: left;}
 
