--- a/style.css
+++ b/style.css
@@ -622,7 +622,8 @@ figcaption{
 
 .surmain{
 	position: relative;
-	background-color: white;}
+	background-color: white;
+	padding-top: 60px;}
 
 @media (prefers-color-scheme: dark){
 	body{
